--- a/libs/common/src/lib/label/label-field/label-field.component.html
+++ b/libs/common/src/lib/label/label-field/label-field.component.html
@@ -3,6 +3,7 @@
   class="label-field"
   [class.small-button]="size === 'small'">
   <app-label-dropdown
+    *ngIf="!disabled"
     [size]="size"
     [labelSets]="labelSets$ | async"
     [selection]="selection"
