--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -39,7 +39,7 @@
     </ng-template>
 
     <div class="upload-container">
-      <ng-container *ngIf="isMainView">
+      <ng-container *ngIf="isMainView && (isAdminOrContrib | async)">
         <stf-upload-button></stf-upload-button>
 
         <pa-button
