[sc-6469]: Fix back to accounts button
- Remove `Back to accounts` button from the footer, as we have already a `Back` button in the header
- Fix Back behavior to display the list of accounts properly (was probably broken when we upgraded to ng16)
- Fix KB creation form from kb selection footer:
  - hide "create kb" button once we click on it
  - always enable cancel button
  - disabled the form during creation to prevent multiple clicks while creation is in progress
  - add error toast if creation fails

--- a/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
+++ b/libs/common/src/lib/select-account-kb/select-kb/select-kb.component.html
@@ -68,28 +68,20 @@
 
   <div class="select-kb-footer">
     <pa-button
-      *ngIf="(standalone && !addKb) || (canAddKb | async) === true"
+      *ngIf="!addKb && (standalone || (canAddKb | async) === true)"
       (click)="toggleForm()">
       {{ 'stash.create' | translate }}
-    </pa-button>
-
-    <pa-button
-      *ngIf="!addKb && !standalone"
-      kind="inverted"
-      (click)="back()">
-      {{ 'generic.back_to_accounts' | translate }}
     </pa-button>
 
     <ng-container *ngIf="addKb">
       <pa-button
         aspect="basic"
-        [disabled]="kbName.pristine"
         (click)="toggleForm()">
         {{ 'generic.cancel' | translate }}
       </pa-button>
 
       <pa-button
-        [disabled]="kbName.invalid"
+        [disabled]="kbName.invalid || creatingKb"
         (click)="save()">
         {{ 'generic.save' | translate }}
       </pa-button>
