--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -49,7 +49,7 @@
               size="small"
               kind="inverted"
               [popupRef]="range">
-              {{ 'account.chart_range_label' | translate: { hours: pendingRange.value } }}
+              {{ 'account.chart_range_label' | translate : { hours: pendingRange.value } }}
             </nsi-dropdown-button>
             <pa-dropdown #range>
               <pa-option
@@ -111,17 +111,21 @@
       </div>
       <div>
         <div class="title-s">{{ 'account.knowledgeboxes' | translate }}</div>
-        <div
+        <ul
           class="kb-list"
           *ngIf="account | async as account">
-          <a
-            class="kb-item"
-            *ngFor="let kb of kbs | async"
-            [href]="getKbUrl(account.slug, kb.slug)">
-            <pa-icon [name]="kb.state === 'PUBLISHED' ? 'unlock' : 'lock'"></pa-icon>
-            {{ kb.title }}
-          </a>
-        </div>
+          <li *ngFor="let kb of kbs | async">
+            <a
+              class="kb-item"
+              [href]="getKbUrl(account.slug, kb.slug)">
+              {{ kb.title }}
+              <pa-icon
+                *ngIf="kb.state === 'PRIVATE'"
+                size="small"
+                name="lock"></pa-icon>
+            </a>
+          </li>
+        </ul>
       </div>
       <div>
         <div class="title-s">{{ 'account.total_queries' | translate }}</div>
