--- a/apps/dashboard/src/app/account/account-home/account-home.component.scss
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.scss
@@ -66,15 +66,21 @@
       display: flex;
       flex-direction: column;
       gap: rhythm(1);
+      list-style: none;
+      padding: 0;
       margin-top: rhythm(1.5);
     }
 
     .kb-item {
       align-items: center;
       color: inherit;
-      display:flex;
+      display: flex;
       gap: rhythm(1);
       text-decoration: none;
+
+      pa-icon {
+        display: flex;
+      }
     }
   }
 }
