--- a/libs/search-widget/src/components/result-row/ResultRow.scss
+++ b/libs/search-widget/src/components/result-row/ResultRow.scss
@@ -1,6 +1,7 @@
 .sw-result-row {
   --paragraph-height: var(--rhythm-4);
   --paragraph-gap: var(--rhythm-0_5);
+  --expanded-paragraph-height: 0px;
 
   display: flex;
 
@@ -24,13 +25,14 @@
 
   .sw-paragraphs-container {
     height: calc(
-      var(--paragraph-height) * var(--paragraph-count) + var(--paragraph-gap) * (var(--paragraph-count) - 1)
+      var(--paragraph-height) * var(--paragraph-count) + var(--paragraph-gap) * (var(--paragraph-count) - 1) +
+        var(--expanded-paragraph-height)
     );
     overflow: hidden;
     transition: height var(--transition-fast);
 
     &.can-expand:not(.expanded) {
-      height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3);
+      height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3 + var(--expanded-paragraph-height));
     }
   }
 }
