Move old subscription table

--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -23,180 +23,8 @@
   <div class="header">
     <p class="body-m">{{ 'billing.subscription.help' | translate }}</p>
   </div>
-  <table
-    class="subscriptions"
-    *ngIf="accountTypesDefaults | async as defaults">
-    <tr>
-      <th>{{ 'billing.quotas' | translate }}</th>
-      <th class="plan">
-        <div class="plan-name">
-          {{ 'billing.trial.title' | translate: { days: defaults['stash-trial'].max_trial_days } }}
-        </div>
-        <div class="price">{{ 'billing.free' | translate }}</div>
-      </th>
-      <th class="plan">
-        <div class="plan-name">Starter/Developer</div>
-        <div class="price">
-          {{ (prices | async)?.['stash-developer'].recurring.month.price | currency: currency}}
-          <span class="unit">/{{ 'billing.month' | translate }}</span>
-        </div>
-        <pa-button
-          *ngIf="(accountType | async) === 'stash-trial'"
-          kind="primary"
-          routerLink="../checkout"
-          [queryParams]="{ type: 'stash-developer' }">
-          {{ 'billing.upgrade' | translate }}
-        </pa-button>
-        <div
-          *ngIf="(accountType | async) === 'stash-developer'"
-          class="subscribed">
-          <pa-icon name="check"></pa-icon>
-          <span class="title-s">{{ 'billing.subscribed' | translate }}</span>
-        </div>
-      </th>
-      <th class="plan">
-        <div class="plan-name">Business</div>
-        <div class="price">
-          <span class="unit">{{ 'billing.already_available' | translate }}</span>
-        </div>
-        <pa-button
-          *ngIf="(accountType | async) !== 'stash-business'"
-          kind="primary"
-          (click)="contact()">
-          {{ 'billing.contact' | translate }}
-        </pa-button>
-        <div
-          *ngIf="(accountType | async) === 'stash-business'"
-          class="subscribed">
-          <pa-icon name="check"></pa-icon>
-          <span class="title-s">{{ 'billing.subscribed' | translate }}</span>
-        </div>
-      </th>
-      <th class="plan">
-        <div class="plan-name">Enterprise</div>
-        <div class="price">
-          <span class="unit">{{ 'billing.enterprise_ready' | translate }}</span>
-        </div>
-        <pa-button
-          *ngIf="(accountType | async) !== 'stash-enterprise'"
-          kind="primary"
-          (click)="contact()">
-          {{ 'billing.contact' | translate }}
-        </pa-button>
-        <div
-          *ngIf="(accountType | async) === 'stash-enterprise'"
-          class="subscribed">
-          <pa-icon name="check"></pa-icon>
-          <span class="title-s">{{ 'billing.subscribed' | translate }}</span>
-        </div>
-      </th>
-    </tr>
-    <tr>
-      <td>{{ 'billing.quotas.kbs' | translate }}</td>
-      <td>{{ defaults['stash-trial'].max_kbs }}</td>
-      <td>{{ defaults['stash-developer'].max_kbs }}</td>
-      <td>{{ defaults['stash-business'].max_kbs }}</td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>{{ 'billing.quotas.files' | translate }}</td>
-      <td>
-        <div>{{ defaults['stash-trial'].monthly_limit_docs_no_media_processed | number }}</div>
-        <div class="unit">
-          {{ 'billing.quotas.up-to' | translate }}
-          {{ defaults['stash-trial'].upload_limit_max_non_media_file_size | size }}
-        </div>
-      </td>
-      <td>
-        <div>{{(prices | async)?.['stash-developer'].usage['files'].threshold | number}}</div>
-        <div class="unit">
-          {{ 'billing.quotas.up-to' | translate }}
-          {{ defaults['stash-developer'].upload_limit_max_non_media_file_size | size }}
-        </div>
-      </td>
-      <td>
-        <div>{{(prices | async)?.['stash-business'].usage['files'].threshold | number}}</div>
-        <div class="unit">
-          {{ 'billing.quotas.up-to' | translate }}
-          {{ defaults['stash-business'].upload_limit_max_non_media_file_size | size }}
-        </div>
-      </td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>{{ 'billing.quotas.medias' | translate }}</td>
-      <td>
-        <div *ngIf="defaults['stash-trial'].monthly_limit_media_seconds_processed / 3600 as hours">
-          {{ hours }} {{ (hours === 1 ? 'billing.hour' : 'billing.hours') | translate }}
-        </div>
-        <div class="unit">
-          {{ 'billing.quotas.up-to' | translate }} {{ defaults['stash-trial'].upload_limit_max_media_file_size | size }}
-        </div>
-      </td>
-      <td>
-        <div *ngIf="(prices | async)?.['stash-developer'].usage['media'].threshold as hours">
-          {{ hours }} {{ (hours === 1 ? 'billing.hour' : 'billing.hours') | translate }}
-        </div>
-        <div class="unit">
-          {{ 'billing.quotas.up-to' | translate }}
-          {{ defaults['stash-developer'].upload_limit_max_media_file_size | size }}
-        </div>
-      </td>
-      <td>
-        <div *ngIf="(prices | async)?.['stash-business'].usage['media'].threshold as hours">
-          {{ hours }} {{ (hours === 1 ? 'billing.hour' : 'billing.hours') | translate }}
-        </div>
-        <div class="unit">
-          {{ 'billing.quotas.up-to' | translate }}
-          {{ defaults['stash-business'].upload_limit_max_media_file_size | size }}
-        </div>
-      </td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>{{ 'billing.quotas.searches' | translate }}</td>
-      <td>
-        <div>{{ defaults['stash-trial'].monthly_limit_hosted_searches_performed | number }}</div>
-      </td>
-      <td>
-        <div>{{(prices | async)?.['stash-developer'].usage['searches'].threshold | number}}</div>
-      </td>
-      <td>
-        <div>{{(prices | async)?.['stash-business'].usage['searches'].threshold | number }}</div>
-      </td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>{{ 'billing.quotas.answers' | translate }}</td>
-      <td>
-        <div>{{ defaults['stash-trial'].monthly_limit_hosted_answers_generated | number }}</div>
-      </td>
-      <td>
-        <div>{{(prices | async)?.['stash-developer'].usage['qa'].threshold | number}}</div>
-      </td>
-      <td>
-        <div>{{(prices | async)?.['stash-business'].usage['qa'].threshold | number }}</div>
-      </td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>{{ 'billing.quotas.training' | translate }}</td>
-      <td>
-        <div>–</div>
-      </td>
-      <td>
-        <div>
-          {{(prices | async)?.['stash-developer'].usage['training'].threshold | number}} {{ 'hours' | translate }}
-        </div>
-      </td>
-      <td>
-        <div>
-          {{(prices | async)?.['stash-business'].usage['training'].threshold | number }} {{ 'hours' | translate }}
-        </div>
-      </td>
-      <td>-</td>
-    </tr>
-  </table>
+
+  <app-deprecated-tiers *ngIf="(showNewTiers | async) === false"></app-deprecated-tiers>
 
   <div>
     <h2>{{ 'billing.cost_over_limits' | translate }}</h2>
