Option to hide sources in generated answers

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -96,6 +96,13 @@
             {{ 'stash.widgets.onlyAnswers' | translate }}
           </pa-toggle>
           <pa-toggle
+            *ngIf="areAnswersEnabled | async"
+            labelOnRight
+            help="stash.widgets.hideSources.help"
+            formControlName="hideSources">
+            {{ 'stash.widgets.hideSources' | translate }}
+          </pa-toggle>
+          <pa-toggle
             labelOnRight
             help="stash.widgets.relations.help"
             formControlName="relations">
