--- a/apps/dashboard/src/app/account/billing/calculator/deprecated-calculator.component.scss
+++ b/apps/dashboard/src/app/account/billing/calculator/deprecated-calculator.component.scss
@@ -4,10 +4,10 @@
   pa-slider ::ng-deep .pa-field .pa-field-control-range[type='range'] {
     width: rhythm(35);
   }
-}
-
-h2 {
-  margin: 0;
+  ::ng-deep .contact a {
+    color: currentColor;
+    text-decoration: underline;
+  }
 }
 
 form {
