--- a/apps/dashboard/src/app/account/billing/usage/usage-table.component.html
+++ b/apps/dashboard/src/app/account/billing/usage/usage-table.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="usage">
+<ng-container *ngIf="usageData | async as usage">
   <header>
     <div>
       <h2>{{ 'billing.usage.title' | translate }}</h2>
@@ -6,13 +6,16 @@
         {{
           'billing.usage.interval'
             | translate
-              : { from: usage.start_billing_date | date: 'YYYY-MM-dd', to: usage.end_billing_date | date: 'YYYY-MM-dd' }
+              : {
+                  from: usage.start_billing_date | date : 'YYYY-MM-dd',
+                  to: usage.end_billing_date | date : 'YYYY-MM-dd'
+                }
         }}
       </div>
     </div>
 
     <div class="total title-l">
-      {{ total | currency: usage.currency }}
+      {{ total | async | currency : usage.currency }}
     </div>
   </header>
 
@@ -26,13 +29,13 @@
         <div class="cost">{{ 'billing.usage.over_cost' | translate }}</div>
       </pa-table-cell>
     </pa-table-header>
-    <pa-table-row *ngFor="let item of invoiceItems">
+    <pa-table-row *ngFor="let item of invoiceItems | async">
       <pa-table-cell>{{ 'billing.parameter.' + item[0] | translate }}</pa-table-cell>
       <pa-table-cell>{{ item[1].threshold | number }}</pa-table-cell>
       <pa-table-cell>{{ item[1].current_usage | number }}</pa-table-cell>
       <pa-table-cell>{{ item[1].over_usage | number }}</pa-table-cell>
       <pa-table-cell>
-        <div class="cost">{{ item[1].over_cost | currency: usage.currency }}</div>
+        <div class="cost">{{ item[1].over_cost | currency : usage.currency }}</div>
       </pa-table-cell>
     </pa-table-row>
   </pa-table>
