fix totalSearch async

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -99,4 +99,6 @@
     </div>
   </div>
 </div>
-<app-knowledge-box-survey [totalSearch]="totalSearch | async"></app-knowledge-box-survey>
+<ng-container *ngIf="(totalSearch | async) > 0">
+  <app-knowledge-box-survey [totalSearch]="totalSearch | async"></app-knowledge-box-survey>
+</ng-container>
