--- a/libs/common/src/lib/resources/resource-list/resource-list.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.scss
@@ -32,6 +32,13 @@ $table-breakpoint: 1400px;
     }
   }
 
+  .shared-queue-container {
+    align-items: center;
+    display: flex;
+    flex-shrink: 0;
+    gap: rhythm(1);
+  }
+
   .upload-container {
     display: flex;
     gap: rhythm(2);
