--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -49,7 +49,9 @@
     <div
       *ngIf="isKbAdmin | async"
       class="right-column">
-      <div class="account-status">
+      <div
+        class="account-status"
+        *ngIf="isAccountManager | async">
         <app-account-status></app-account-status>
       </div>
       <div class="container resource-stats">
