--- a/libs/common/src/lib/user/onboarding/onboarding.component.html
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.html
@@ -36,7 +36,7 @@
             <pa-option value="Global site search">{{ 'onboarding.use_case.global_search' | translate }}</pa-option>
             <pa-option value="Workspace Search">{{ 'onboarding.use_case.workspace_search' | translate }}</pa-option>
             <pa-option value="Research & Analysis">{{ 'onboarding.use_case.research_analysis' | translate }}</pa-option>
-            <pa-option value="Own AI model training">{{ 'onboarding.use_case.ai_training' | translate }}</pa-option>
+            <pa-option value="AI model training">{{ 'onboarding.use_case.ai_training' | translate }}</pa-option>
             <pa-option value="Other">{{ 'onboarding.use_case.other' | translate }}</pa-option>
           </pa-select>
         </div>
