add beta mention on cohere and palm

--- a/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
@@ -57,8 +57,8 @@
                 *ngFor="let value of conf.data.options"
                 [value]="value.value">
                 {{
-                  (hasTranslation('stash.config.' + value.value)
-                    ? 'stash.config.' + value.value
+                  (hasTranslation('stash.config.option.' + value.value)
+                    ? 'stash.config.option.' + value.value
                     : value.name.toLowerCase()
                   ) | translate
                 }}
